# pypz-python

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CLA.md  CNAME  COC.md  CONTRIBUTING.md  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg
.docker/: Dockerfile_alpine  Dockerfile_dev  Dockerfile_test  pypz-startup.sh
.doctrees/: environment.pickle  index.doctree
_images/: graphviz-d20262df3e40e73d5b237da8be21509c68a8914c.png.map  inheritance-516cda79a80faf63fce726f1241a5e921c7ad5fd.png.map  inheritance-535acdcd43ad385de444d7b5d882ce8a7b284079.png.map  inheritance-68aaeb25875f9ed7da4f9e915f7721173a866858.png.map  inheritance-6d6b9584ab6da2bc303c8cf46d2cfc39c67ad238.png.map  inheritance-6f52768b5ab9c9eb7b1b4deb293b31c224afd4da.png.map  inheritance-72576939779a3cacf0c4d043ef825f8df5cab6be.png.map  inheritance-8e90ad792ef1dac1deca22691031b37b89373cdb.png.map  inheritance-9afe5187dd6128e38dd8b7df4eaff56c8bcb237c.png.map  (+4 more)
_sources/: index.rst.txt
core/: README.md  data_transfer.html  deployer.html  executor.html  logging.html  models.html  parameters.html  pyproject.toml
core/docs/: conf.py  ht_create_pipeline.rst  ht_create_plugin.rst  index.rst  instances.rst  models.rst
core/docs/_build/doctrees/: data_transfer.doctree  deployer.doctree  environment.pickle  executor.doctree  ht_build_and_package.doctree  ht_create_channel.doctree  ht_create_deployer.doctree  ht_create_pipeline.doctree  ht_create_plugin.doctree  ht_debug_in_operator.doctree  index.doctree  logging.doctree  models.doctree  overview.doctree  parameters.doctree
core/docs/_build/doctrees/core/: data_transfer.doctree  deployer.doctree  executor.doctree  logging.doctree  models.doctree  overview.doctree  parameters.doctree
core/docs/_build/doctrees/guides/: ht_build_and_package.doctree  ht_create_channel.doctree  ht_create_deployer.doctree  ht_create_pipeline.doctree  ht_create_plugin.doctree  ht_debug_in_operator.doctree
core/docs/_build/html/: .buildinfo  data_transfer.html  deployer.html  executor.html  genindex.html  ht_build_and_package.html  ht_create_channel.html  ht_create_deployer.html  ht_create_pipeline.html  ht_create_plugin.html  ht_debug_in_operator.html  index.html  logging.html  models.html  objects.inv  overview.html  parameters.html  search.html  searchindex.js
core/docs/_build/html/_sources/: data_transfer.rst.txt  executor.rst.txt  index.rst.txt
core/docs/_build/html/_sources/guides/: ht_create_channel.rst.txt
core/docs/_build/html/core/: data_transfer.html  deployer.html  executor.html  logging.html  models.html  overview.html  parameters.html
core/docs/_build/html/guides/: ht_build_and_package.html  ht_create_channel.html  ht_create_deployer.html  ht_create_pipeline.html  ht_create_plugin.html  ht_debug_in_operator.html
core/docs/core/: data_transfer.rst  deployer.rst  executor.rst  logging.rst  models.rst  parameters.rst
core/docs/guides/: ht_build_and_package.rst  ht_create_deployer.rst  ht_create_pipeline.rst  ht_debug_in_operator.rst
core/docs/modindex/: core.specs.rst
core/docs/resources/: pypz_01.drawio.html
core/docs/resources/.drawio/: .$ht_cp_planned_pipeline.drawio.bkp  channel_w_reader_writer.drawio  pypz_01.drawio
core/src/pypz/: version.py
core/src/pypz/abstracts/: channel_ports.py  misc.py
core/src/pypz/core/channels/: base.py  io.py  misc.py  status.py
core/src/pypz/core/commons/: loggers.py  parameters.py  utils.py
core/src/pypz/core/specs/: dtos.py  instance.py  misc.py  operator.py  pipeline.py  plugin.py  utils.py
core/src/pypz/deployers/: base.py
core/src/pypz/executors/: commons.py
core/src/pypz/executors/operator/: context.py  executor.py  signals.py  states.py
core/src/pypz/executors/pipeline/: executor.py
core/src/pypz/plugins/loggers/: default.py
core/src/pypz/plugins/misc/: health_check.py
core/src/pypz/runnables/: operator.py
core/test/abstracts_tests/: channel_input_port_tests.py  channel_output_port_tests.py  channel_ports_resources.py
core/test/channels_tests/: channel_test.py  resources.py  status_monitor_test.py
core/test/commons_tests/: param_schema_builder_test.py  parameter_test.py  template_resolver_test.py  timer_test.py
core/test/deployers_tests/: base_test.py  resources.py
core/test/operator_executor_tests/: context_test.py  executor_test.py  resources.py  state_base_test.py  state_entry_test.py  state_machine_test.py  state_operation_init_test.py  state_operation_running_test.py  state_operation_shutdown_test.py  state_resource_creation_test.py  state_resource_deletion_test.py  state_service_shutdown_test.py  state_service_start_test.py
core/test/pipeline_executor_tests/: executor_test.py
core/test/plugin_tests/: health_check_plugin_test.py
core/test/specs_tests/: instance_test.py  instance_test_resources.py  operator_test.py  operator_test_resources.py  pipeline_test.py  plugin_test.py  utils_test.py
deployers/k8s/: README.md  pyproject.toml
deployers/k8s/src/pypz/deployers/: k8s.py
deployers/k8s/src/pypz/operators/: k8s.py
deployers/k8s/src/pypz/plugins/: k8s.py
deployers/k8s/test/: deployer_test.py
deployers/k8s/test/resources/: Dockerfile  pipeline.py  startup.sh
deployers/k8s/test/resources/docker/: Dockerfile  pypz-startup.sh
docs/: conf.py  (+2 more)
plugins/amq_io/: pyproject.toml
plugins/kafka_io/: README.md  pyproject.toml
plugins/kafka_io/src/pypz/plugins/kafka_io/: channels.py  ports.py
plugins/kafka_io/test/: channel_tests.py  kafka_channel_test.py  kafka_io_port_test.py  port_tests.py  resources.py
plugins/rmq_io/: README.md  pyproject.toml
plugins/rmq_io/src/pypz/plugins/rmq_io/: channels.py  ports.py  utils.py
plugins/rmq_io/src/pypz/rmq_io/: channels.py  ports.py  utils.py
plugins/rmq_io/test/: channel_tests.py  writer.py
plugins/rmq_io/test/rabbitmq/: start.cmd  start.sh
sniffer/: README.md  overview.html  pyproject.toml
sniffer/src/pypz/sniffer/: __main__.py  sniffer.py  utils.py  viewer.py  views.py
sniffer/test/: resources.py  utils_test.py
(+446 files in other folders)
