[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pypz-core"
dynamic = ["version"]
authors = [
    { name = "Laszlo Anka", email = "laszlo.anka@gmail.com" }
]
license = "Apache-2.0"
description = "Core components of pypz (pipes), which is a lightweight Pipeline as Code (PaC) framework."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11"
]
keywords = [
    "pypz",
    "pypz-core"
]
dependencies = [
    "colorlog"
]

[project.optional-dependencies]
docs = [
    "sphinx-rtd-theme >= 2.0.0",
    "sphinx ~= 7.2.6",
    "sphinx-autodoc-typehints >= 1.25.2",
    "sphinx-copybutton ~= 0.5.2",
    "graphviz >= 0.20.1",
    "pydot >= 2.0.0"
]

[tool.setuptools.dynamic]
version = {attr = "pypz.version.PROJECT_VERSION"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true