[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pypz-core"
dynamic = ["version"]
authors = [
    { name = "Laszlo Anka", email = "laszlo.anka@gmail.com" }
]
description = "Core components of pypz (pipes), which is a lightweight Pipeline as Code (PaC) framework."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
classifiers = [
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11"
]
keywords = [
    "pypz",
    "pypz-core"
]

dependencies = [
    "PyYAML~=6.0.1"
]

[project.optional-dependencies]
static = [
    "flake8 ~= 7.0.0",
    "flake8-html ~= 0.4.3",
    "mypy ~= 1.8.0",
    "coverage ~= 7.4.1"
]

[tool.setuptools.dynamic]
version = {attr = "pypz.version.PROJECT_VERSION"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true