[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pypz-io-sniffer"
version = "0.9.0b4"
authors = [
    { name = "Laszlo Anka", email = "laszlo.anka@gmail.com" }
]
description = "A small tool that is capable to sniff and visualize the control messages between Operators."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11"
]
keywords = [
    "pypz",
    "sniffer"
]
dependencies = [
    "pypz-core"
]


[tool.setuptools.packages.find]
where = ["src"]
namespaces = true