[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pypz-io-sniffer"
version = "0.9.0b6"
license = { file = "LICENSE" }
authors = [
    { name = "Laszlo Anka", email = "laszlo.anka@gmail.com" }
]
description = "A small tool that is capable to sniff and visualize the control messages between Operators."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11"
]
keywords = [
    "pypz",
    "sniffer"
]
dependencies = [
    "pypz-core"
]

[tool.setuptools]
license-files = ["../LICENSE"]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true