[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pypz-k8s-deployer"
version = "0.9.0b7"
authors = [
    { name = "Laszlo Anka", email = "laszlo.anka@gmail.com" }
]
description = "This package provides the Kubernetes implementation of the deployer interface for pypz."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
classifiers = [
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11"
]
keywords = [
    "pypz",
    "k8s",
    "kubernetes",
    "deployer"
]
dependencies = [
    "pypz-core",
    "kubernetes==v28.1.0",
    "certifi~=2023.7.22"
]

[tool.setuptools]
license-files = ["../LICENSE"]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true