[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project.urls]
Documentation = "https://pypz.dev"
Repository = "https://github.com/lazlowa/pypz-python"

[project]
name = "pypz-k8s-deployer"
version = "0.9.3"
authors = [
    { name = "Laszlo Anka", email = "laszlo.anka@gmail.com" }
]
description = "This package provides the Kubernetes implementation of the deployer interface for pypz."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
classifiers = [
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11"
]
keywords = [
    "pypz",
    "k8s",
    "kubernetes",
    "deployer"
]
dependencies = [
    "pypz-core",
    "kubernetes==v28.1.0",
    "certifi~=2023.11.17"
]

[project.optional-dependencies]
static = [
    "flake8 ~= 7.0.0",
    "flake8-html ~= 0.4.3",
    "mypy ~= 1.8.0",
    "coverage ~= 7.4.1"
]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true