[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pypz-kafka-io"
version = "0.9.0b10"
authors = [
    { name = "Laszlo Anka", email = "laszlo.anka@gmail.com" }
]
description = "Provides a Kafka implementation of the ChannelInput/OutputPort in pypz."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
classifiers = [
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11"
]
keywords = [
    "pypz",
    "plugin",
    "kafka"
]
dependencies = [
    "pypz-core",
    "avro==1.10.1",
    "kafka-python==2.0.2",
    "avro-validator==1.2.1"
]

[project.optional-dependencies]
static = [
    "flake8 ~= 7.0.0",
    "flake8-html ~= 0.4.3",
    "mypy ~= 1.8.0",
    "coverage ~= 7.4.1"
]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true