[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project.urls]
Documentation = "https://pypz.dev"
Repository = "https://github.com/lazlowa/pypz-python"

[project]
name = "pypz-rmq-io"
version = "0.9.4"
authors = [
    { name = "Laszlo Anka", email = "laszlo.anka@gmail.com" }
]
description = "Provides an AMQP implementation for RabbitMQ of the ChannelInput/OutputPort in pypz."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
classifiers = [
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11"
]
keywords = [
    "pypz",
    "plugin",
    "amqp"
]
dependencies = [
    "pypz-core",
    "amqp==5.2.0",
    "avro==1.10.1",
    "avro-validator==1.2.1"
]

[project.optional-dependencies]
static = [
    "flake8 ~= 7.0.0",
    "flake8-html ~= 0.4.3",
    "mypy ~= 1.8.0",
    "coverage ~= 7.4.1"
]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true